--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -136,9 +136,9 @@
 }
 
 .md-typeset__table table {
-    table-layout: fixed !important; /* Pevné rozložení tabulky */
-    width: 100% !important; /* Tabulka vyplní rodiče */
-    border-collapse: collapse !important; /* Zajišťuje správné ohraničení */
+    table-layout: fixed !important; 
+    width: 100% !important; 
+    border-collapse: collapse !important; 
 }
 
 .md-typeset__table table th,
@@ -151,6 +151,5 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-	text-align: center !important;		
 }
 
